# AirMix

./: .gitignore  AirMix.code-workspace  CMakeLists.txt  Dockerfile  README.md  compose.yaml
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/: CMakeLists.txt  main.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/BT_Player/: BT_Player.c  BT_Player.h  bt_meta_uart.c  bt_meta_uart.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LCD_Driver/: ST7789.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LCD_Driver/Vernon_ST7789T/: Vernon_ST7789T.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_Driver/: LVGL_Driver.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example_onboard_backup.c  LVGL_Example_onboard_landscape_backup.c  symbols_zh.txt  symbols_zh_sub.txt  ui_bluetooth.c  ui_bluetooth.h  ui_common.c  ui_common.h  ui_font_zh_12.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/RGB/: RGB.c
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/TFT_Test/: TFT_Test.c  TFT_Test.h
ESP32-C6-LCD-1.47-Demo/ESP-IDF/ESP32-C6-LCD-1.47-Test/main/backup_c6_test/: CMakeLists.txt  main.c
algorithm-training/: README.md
docs/: PROJECT_STRUCTURE.md  chip_architecture.md  cursor_esp32p4_dev_setup.md  esp32_p4_bt_playback.md  esp32_p4_i2s_wiring.md  esp32_p4_spi_lcd_wiring.md  hardware_assumptions.md  interaction_mapping.md  mvp_roadmap.md  product_spec.md  system_architecture.md
firmware/esp32p4-bt-bridge-rx/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.full  sdkconfig.defaults.pre_v3
firmware/esp32p4-bt-bridge-rx/main/: CMakeLists.txt  CMakeLists.txt.full  Kconfig.projbuild  app_video.h  bt_bridge_pins.h  camera_spi_preview.c  camera_spi_preview.h  idf_component.yml  lcd_colorchecker.c  lcd_colorchecker.h  lcd_st7789.c  lcd_st7789.h  lcd_st7789_pins.h  main.c  main.c.full  meta_uart_rx.c  meta_uart_rx.h  ui_status.c  ui_status.h
hardware/: README.md
hardware/ESP32-P4-WIFI6/: README.md
projects/: README.md  esp32-bt-audio  esp32p4-wifi
src/: main.cpp
src/audio/: AudioBuffer.h  AudioEngine.h  AudioInput.h  AudioOutput.h  EffectParameters.h  EffectProcessor.h
src/controls/: ButtonInput.h  ControlState.h
src/mapping/: GestureToEffectMapper.h
src/motion/: GestureType.h  IMUInput.h  MotionDetector.h
src/tempo/: TapTempo.h
src/tests/: test_effect_mapping.cpp  test_motion_detector.cpp  (+1 more)
(+22 files in other folders)
